Process ontology data sources first and add ability to declare data source dependencies